fixed gapping issue

--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 body {
   font-family: sans-serif;
   display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100vh;
   background-image: url('./assets/images/background.png');
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
   width: 100%;
   display: flex;
+  flex: 1;
   padding-top: 90px;
 }
 
@@ -19,7 +23,7 @@ body {
   background-color: #ffffff;
   border: none;
   font-size: 18px;
-  margin: 20px auto;
+  margin: 20px 10px;
   padding: 40px 40px;
 }
 
@@ -43,11 +47,13 @@ p {
 form {
   background-color: #ffffff;
   width: 100%;
+  height: fit-content;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  flex: 1;
 }
 
-.form-header{
+.form-header {
   padding: 20px 0px;
 }
 
